[package]
name = "perionav"
version = "0.1.3"
edition = "2021"

[dependencies]
ordered-float = "4.2.0"
rand = "0.8.5"
osmpbf = "0.3.2"
lazy_static = "1.4.0"
kdtree = "0.7.0"
geoutils = "0.5.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rstest = "0.18.2"

[[bench]]
name = "my_benchmark"
harness = false
